# Adam

./: .gitignore  Cargo.toml  LICENSE  README.md  queries.txt
example_api_keys/: groq_API_key.txt  twitter_auth.csv
src/: groq_api_handler.rs  main.rs  twitter_api_handler.rs
