[package]
name = "adam"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.13.1", features = ["json"] }
tokio = { version = "1.49.0", features = ["full"] }
serde_json = "1.0.149"
chrono = "0.4.43"
serde = "1.0.228"
csv = "1.4.0"
regex = "1.12.2"
twitter-v2 = "0.1.8"
rand = "0.9.2"
